[gd_scene load_steps=11 format=3 uid="uid://cmfi7rml7drpt"]

[ext_resource type="Script" path="res://entities/abilities/movement/MovementTree.gd" id="1_yirm8"]
[ext_resource type="PackedScene" uid="uid://duyl76sc706qk" path="res://entities/abilities/movement/branch/ground_branch.tscn" id="2_7ihk6"]
[ext_resource type="PackedScene" uid="uid://b15aqipwb20vv" path="res://entities/abilities/movement/leaf/IdleState.tscn" id="3_di5tl"]
[ext_resource type="PackedScene" uid="uid://i8sp6e5hc6xd" path="res://entities/abilities/movement/leaf/RunState.tscn" id="4_6hbgb"]
[ext_resource type="PackedScene" uid="uid://6mwr5hgf6ldk" path="res://entities/abilities/movement/branch/air_branch.tscn" id="5_u8bv7"]
[ext_resource type="PackedScene" uid="uid://cks5h065gwsgc" path="res://entities/abilities/movement/leaf/JumpState.tscn" id="6_bd8ah"]
[ext_resource type="PackedScene" uid="uid://dmvr5piar72vt" path="res://entities/abilities/movement/leaf/FallState.tscn" id="7_7pgtk"]
[ext_resource type="PackedScene" uid="uid://cmebbv2ris04h" path="res://entities/abilities/movement/branch/wall_branch.tscn" id="8_4xf8l"]
[ext_resource type="PackedScene" uid="uid://c3nhr45sr8ys2" path="res://entities/abilities/movement/leaf/wall_state.tscn" id="9_btpaa"]
[ext_resource type="PackedScene" uid="uid://dtqgael5orcu2" path="res://entities/abilities/movement/leaf/Wall JumpState.tscn" id="10_uixog"]

[node name="MovementTree" type="LimboHSM"]
script = ExtResource("1_yirm8")
accel_time = 0.15
decel_rate = 0.98
jumps = 1
wall_kick_angle = 32
wall_kick_force = 1200

[node name="GroundBranch" parent="." instance=ExtResource("2_7ihk6")]

[node name="IdleState" parent="GroundBranch" instance=ExtResource("3_di5tl")]

[node name="RunState" parent="GroundBranch" instance=ExtResource("4_6hbgb")]

[node name="AirBranch" parent="." instance=ExtResource("5_u8bv7")]

[node name="FallState" parent="AirBranch" instance=ExtResource("7_7pgtk")]
x_mod = 0.8

[node name="JumpState" parent="AirBranch" instance=ExtResource("6_bd8ah")]
x_mod = 0.9

[node name="WallBranch" parent="." instance=ExtResource("8_4xf8l")]

[node name="WallState" parent="WallBranch" instance=ExtResource("9_btpaa")]

[node name="Wall JumpState" parent="WallBranch" instance=ExtResource("10_uixog")]
x_mod = 0.85
